[package]
name = "proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["macros"] }
reqwest = "0.13.4"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
tower = { version = "0.5.3", features = ["limit"] }
tower-http = { version = "0.6.11", features = ["fs", "trace"] }
