[package]
name = "edgemap"
version = "0.1.0-alpha.1"
authors = ["Lucas Vaz lucas@vazdev.com.br"]
description = "Sitemap-defined caching reverse proxy"
license = "MIT"
repository = "https://github.com/Vaz-Dev/edgemap"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["macros"] }
bytes = "1.11.1"
http-body-util = "0.1.3"
reqwest = "0.13.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tower = { version = "0.5.3", features = ["limit"] }
tower-http = { version = "0.6.11", features = ["fs", "trace"] }
